--- a/Layouts/level 12.xml
+++ b/Layouts/level 12.xml
@@ -43,7 +43,7 @@
             <blend-mode>0</blend-mode>
             <effect-fallback>0</effect-fallback>
             <instances>
-                <instance type="BackgroundTile" uid="91">
+                <instance type="BackgroundTile" uid="138">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <hotspot>Top-left</hotspot>
@@ -62,6 +62,37 @@
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
+                </instance>
+                <instance type="room12" uid="141">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <tile-width>70</tile-width>
+                        <tile-height>70</tile-height>
+                        <tile-x-offset>0</tile-x-offset>
+                        <tile-y-offset>0</tile-y-offset>
+                        <tile-x-spacing>0</tile-x-spacing>
+                        <tile-y-spacing>0</tile-y-spacing>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>0</x>
+                        <y>0</y>
+                        <z>0</z>
+                        <width>840</width>
+                        <height>490</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                        <opacity>1</opacity>
+                    </world>
+                    <tilemap-data>
+                        <width>12</width>
+                        <height>7</height>
+                        <max-width>26</max-width>
+                        <max-height>15</max-height>
+                        <data>-1,-1,-1,-1,48,60,72,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,49,61,73,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,50,62,74,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,51,63,75,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,52,64,76,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,53,65,77,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,54,66,78,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,30,-1,-1,-1,79,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,80,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,32,-1,-1,-1,81,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,82,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,83,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1</data>
+                    </tilemap-data>
                 </instance>
             </instances>
             <effects />
