--- a/Layouts/room-10(datasheet).xml
+++ b/Layouts/room-10(datasheet).xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>room-10(datasheet)</name>
     <sid>7629117739290381</sid>
-    <event-sheet></event-sheet>
+    <event-sheet>rooms</event-sheet>
     <size>
         <width>840</width>
         <height>490</height>
