--- a/Layouts/room-12.xml
+++ b/Layouts/room-12.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>room-12</name>
     <sid>6616786189229226</sid>
-    <event-sheet>level 12</event-sheet>
+    <event-sheet>rooms</event-sheet>
     <size>
         <width>840</width>
         <height>490</height>
