--- a/Layouts/room-13 (start) (ROM-30).xml
+++ b/Layouts/room-13 (start) (ROM-30).xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>room-13 (start) (ROM-30)</name>
     <sid>5356537600930982</sid>
-    <event-sheet>r13</event-sheet>
+    <event-sheet>room-13 (start) (ROM-30)</event-sheet>
     <size>
         <width>840</width>
         <height>490</height>
