--- a/Layouts/room-14.xml
+++ b/Layouts/room-14.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>room-14</name>
     <sid>5255598895850379</sid>
-    <event-sheet>r14</event-sheet>
+    <event-sheet>room-14</event-sheet>
     <size>
         <width>840</width>
         <height>490</height>
