--- a/Layouts/room-15 (GPS).xml
+++ b/Layouts/room-15 (GPS).xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>room-15 (GPS)</name>
     <sid>7669470505169006</sid>
-    <event-sheet>r15</event-sheet>
+    <event-sheet>room-15 (GPS)</event-sheet>
     <size>
         <width>840</width>
         <height>490</height>
