--- a/Layouts/room-13 (start) (Jplay).xml
+++ b/Layouts/room-13 (start) (Jplay).xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>room-13 (start) (Jplay)</name>
     <sid>4916339037974507</sid>
-    <event-sheet>room-13 (start) (Jplay)</event-sheet>
+    <event-sheet></event-sheet>
     <size>
         <width>840</width>
         <height>490</height>
@@ -167,8 +167,8 @@
                         <opacity>1</opacity>
                     </world>
                     <tilemap-data>
-                        <width>26</width>
-                        <height>15</height>
+                        <width>12</width>
+                        <height>7</height>
                         <max-width>26</max-width>
                         <max-height>15</max-height>
                         <data>31,-1,-1,-1,-1,-1,48,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,49,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,30,-1,50,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,32,-1,51,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,48,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,62,74,62,74,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,63,75,63,75,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,51,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,48,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,30,-1,49,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,32,-1,50,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,51,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1</data>
